--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<h1>Matt</h1>
+<h1>Student Bio</h1>
+
+<h2>Matt</h2>
 
 <img src="http://fillmurray.com/200/200">
 
@@ -17,7 +19,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<h1>Contact Info</h1>
+<h2>Contact Info</h2>
 
 <ul>
 	<li><strong>Email:</strong> <a href="mailto:dude@bro.com">dude@bro.com</a></li>
