--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>title</title>
+	<title>Bio</title>
+	<style>
+		p{ display: inline; }
+
+	</style>
 </head>
 <body>
 
