--- a/week1-day2-html-css/student-bio.html
+++ b/week1-day2-html-css/student-bio.html
@@ -5,9 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="container">
+	<header>
 		<h1>Student Bio</h1>
+	</header>
 	
+	<div class="container">	
 
 	<section id="main-bio">
 		<h2>Matt</h2>
